--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "eslint": "^9.35.0",
+    "eslint-plugin-jest": "^29.0.1",
     "globals": "^16.4.0",
     "jest": "^30.1.3"
   }
