--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^9.35.0",
     "eslint-plugin-jest": "^29.0.1",
     "globals": "^16.4.0",
-    "jest": "^30.1.3"
+    "jest": "^30.1.3",
+    "supertest": "^7.1.4"
   }
 }
