--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ "main" ]
 jobs:
-  run-lint:
+  lint-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -19,3 +19,5 @@ jobs:
         run: npm install
       - name: Running Lint
         run: npx eslint
+      - name: Running Unit tests
+        run: npm test
