--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -33,9 +33,11 @@ jobs:
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
-      - name: Upload trivy report as a Github artifact
-        uses: actions/upload-artifact@v4
+      - name: Generate SBOM and submit results to Dependency Graph
+        uses: aquasecurity/trivy-action@0.28.0
         with:
-          name: trivy-sbom-report
-          path: '${{ github.workspace }}/dependency-results.sbom.json'
-          retention-days: 20 # 90 is the default
+          scan-type: 'fs'
+          format: 'github'
+          output: 'dependency-results.sbom.json'
+          scan-ref: '.'
+          github-pat: ${{ secrets.GITHUB_TOKEN }}
