--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -28,11 +28,19 @@ jobs:
         uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: 'davidbalko10/ip-app:${{ github.sha }}'
-          format: 'table'
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
+          output: 'dependency-results.sbom.json'
           severity: 'CRITICAL,HIGH'
+          scan-type: image
+          format: 'github'
+      - name: Upload trivy report as a Github artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-sbom-report
+          path: '${{ github.workspace }}/dependency-results.sbom.json'
+          retention-days: 20 # 90 is the default
       - name: Generate SBOM and submit results to Dependency Graph
         uses: aquasecurity/trivy-action@0.28.0
         with:
