--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Generate Trivy Vulnerability Report
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: "fs"
+          scan-type: "image"
           output: trivy-report.json
           format: json
           scan-ref: .
@@ -43,11 +43,9 @@ jobs:
       - name: Fail build on High/Criticial Vulnerabilities
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: "fs"
+          scan-type: "image"
           format: table
           scan-ref: .
           severity: HIGH,CRITICAL
-          ignore-unfixed: true
           exit-code: 1
-          # On a subsequent call to the action we know trivy is already installed so can skip this
           skip-setup-trivy: true
