--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -27,12 +27,13 @@ jobs:
       - name: Generate Trivy Vulnerability Report
         uses: aquasecurity/trivy-action@master
         with:
+          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
           scan-type: "image"
           output: trivy-report.json
           format: json
           scan-ref: .
           exit-code: 0
-
+          vuln-type: 'os,library'
       - name: Upload Vulnerability Scan Results
         uses: actions/upload-artifact@v4
         with:
@@ -43,6 +44,8 @@ jobs:
       - name: Fail build on High/Criticial Vulnerabilities
         uses: aquasecurity/trivy-action@master
         with:
+          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+          vuln-type: 'os,library'
           scan-type: "image"
           format: table
           scan-ref: .
