--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Generate Trivy Vulnerability Report
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+          image-ref: 'davidbalko10/ip-app:${{ github.sha }}'
           scan-type: "image"
           output: trivy-report.json
           format: json
@@ -44,7 +44,7 @@ jobs:
       - name: Fail build on High/Criticial Vulnerabilities
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+          image-ref: 'davidbalko10/ip-app:${{ github.sha }}'
           vuln-type: 'os,library'
           scan-type: "image"
           format: table
