--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
 jobs:
-  build-and-deploy:
+  build-and-scan:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -47,4 +47,3 @@ jobs:
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
-          skip-setup-trivy: true
