--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -61,3 +61,10 @@ jobs:
         run: |
           cd charts/ip-app-chart
           helm upgrade --set image.tag=${{ github.sha }} -n staging ip-app .
+  notify:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Slack Notification
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
