--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -60,7 +60,7 @@ jobs:
       - name: Helm deploy
         run: |
           cd charts/ip-app-chart
-          helm upgrade --set image.tag=${{ github.sha }} -n staging ip-app .
+          helm upgrade --set image.tag=${{ github.sha }} -f ../../helm-values.yaml -n staging ip-app .
   notify-failure:
     runs-on: ubuntu-latest
     if: ${{ always() && (needs.build-and-scan.result == 'failure' || needs.build-and-scan.result == 'timed_out' || needs.deploy.result == 'failure' || needs.deploy.result == 'timed_out') }}
